# SDTrepricer

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  docker-compose.yml  init_db_standalone.py  pyproject.toml
alembic/: env.py
docs/: architecture.md
migrations/: env.py
migrations/versions/: 2eb9f1923c81_init_schema.py
sdtrepricer/: __init__.py
sdtrepricer/app/: __init__.py  alembic.ini  dependencies.py  init_db.py  main.py  models.py  schemas.py
sdtrepricer/app/api/: __init__.py  actions.py  dashboard.py  profiles.py  settings.py  test_data.py
sdtrepricer/app/core/: config.py  database.py  logging.py
sdtrepricer/app/migrations/: __init__.py  profile_defaults.py
sdtrepricer/app/services/: alerts.py  ftp_loader.py  repricer.py  scheduler.py  sp_api.py  test_data.py
sdtrepricer/app/static/css/: dashboard.css
sdtrepricer/app/static/js/: dashboard.js
sdtrepricer/app/templates/: dashboard.html
sdtrepricer/tests/: conftest.py  test_dashboard_api.py  test_profiles_api.py  test_repricer.py  test_scheduler.py  test_strategy.py
