[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdtrepricer"
version = "0.1.0"
description = "Amazon Europe repricer platform"
readme = "README.md"
authors = [{name = "SDTrepricer Team"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.23",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.28",
    "httpx>=0.24",
    "pydantic-settings>=2.0",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
    "pandas>=2.1",
    "apscheduler>=3.10",
    "email-validator>=2.0",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
    "rich>=13.0",
    "alembic>=1.12"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "pytest-cov>=4.1",
    "ruff>=0.1.13"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B", "C4", "S"]
ignore = ["E501"]

